--- a/6DOFEngineeringScreen/files.qrc
+++ b/6DOFEngineeringScreen/files.qrc
@@ -4,5 +4,11 @@
         <file>testbenchNLLS2D.txt</file>
         <file>in.txt</file>
         <file>Config.txt</file>
+        <file>images/side1.png</file>
+        <file>images/side2.png</file>
+        <file>images/side3.png</file>
+        <file>images/side4.png</file>
+        <file>images/side5.png</file>
+        <file>images/side6.png</file>
     </qresource>
 </RCC>
