--- a/6DOFEngineeringScreen/files.qrc
+++ b/6DOFEngineeringScreen/files.qrc
@@ -10,5 +10,6 @@
         <file>images/side4.png</file>
         <file>images/side5.png</file>
         <file>images/side6.png</file>
+        <file>ConfigReadMe.txt</file>
     </qresource>
 </RCC>
